tricking git, pt 1

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -84,7 +84,7 @@ de:
   privacy policy:                               "Datenschutzrichtlinie"
   terms:                                        "AGB"
   press:                                        "Presse"
-  get support:                                  "Hilfe"
+  get support:                                  "Support"
   donate title:                                 "Spenden"
   choose language field:                        "Wähle deine Sprache:"
   settings:                                     "Einstellungen"
@@ -126,6 +126,9 @@ de:
     like button text:                           "gefällt mir"
     unlike button text:                         "gefällt mir nicht mehr"
   notes:
+    public:                                     "Öffentlich"
+    private:                                    "Privat"
+    draft:                                      "Entwurf"
     creation form errors:                       "Deine Notiz konnte aufgrund der folgenden Fehler nicht angelegt werden:"
     status field:                               "Status:"
     reference field:                            "Bibelstelle(n):"
@@ -170,6 +173,7 @@ de:
     select another chapter:                     "Wähle ein anderes Kapitel"
     view in reader:                             "Lies %{reference} in der Leseansicht"
   users:
+    settings:                                   "Einstellungen"
     no connection friends:                      "Scheinbar sind noch keine %{connection}-Freunde von dir bei YouVersion."
     creation form errors:                       "Aufgrund des folgenden Fehlers konnte dein Konto nicht angelegt werden:"
     profile form errors:                        "Aufgrund des folgenden Fehlers konnte dein Profil nicht aktualisiert werden:"
@@ -189,6 +193,7 @@ de:
     following title:                            "Personen, denen ich folge"
     user does not follow you:                   "%{user} folgt dir nicht."
     recent activity:                            "Jüngste Aktivitäten"
+    my recent_activity:                         "Meine letzte Aktivität"
     started following:                          "Du folgst nun:"
     subscribed to plan:                         "Benutzer, die den %{plan} - Plan abonnieren."
     reading:                                    "Andere, die diesen Plan auch benutzen"    
@@ -214,11 +219,14 @@ de:
     user bookmarks:                             "%{user}s Lesezeichen"
     my likes:                                   "Was ich mag"
     user likes:                                 "Was %{user} mag"
+    my badges:                                  "Meine Auszeichnungen"
     revised date:                               "Zuletzt überarbeitet am %{date}"
     update email copy:                          "Gib eine neue E-Mail-Ad­res­se ein und klicke auf E-Mail aktualisieren. Wir senden dir einen Link, damit du deine neue E-Mail-Ad­res­se bestätigen kannst."
+    edit email:                                 "E-Mail aktualisieren"
     update email check:                         "Bitte rufe deine E-Mails ab und klicke auf den Link, um deine neue E-Mail-Ad­res­se zu bestätigen."
     confirm update email success:               "Danke! Du hast deine E-Mail-Ad­res­se aktualisiert."
     confirm update email error:                 "Sorry, es gab ein Problem beim Ändern deiner E-Mail-Ad­res­se."
+    account confirmed:                          "Dein Konto ist nun aktiviert."
     invalid email forgot:                       "Sorry, wir haben kein Konto mit dieser E-Mail-Ad­res­se gefunden. Bitte versuch es noch einmal."
     send new password button:                   "Sende neues Passwort"
     forgot password copy:                       "Gib deine E-Mail-Ad­res­se ein und klicke auf Sende neues Passwort; dann senden wir dir ein neues Passwort zu."
@@ -347,8 +355,11 @@ de:
       reading_plans:                            "Benachrichtigt mich in Bezug auf von mir abonnierte Lesepläne."
       update:                                   "Benachrichtigungen aktualisieren"
   bookmarks:
+    edit:                                       "Bearbeiten"
+    delete:                                     "Dieses Lesezeichen löschen"
     title field:                                "Titel"
     lables:                                     "Etiketten"
+    all:                                        "Alle"
     labels label:                               "Etiketten:"
     title:                                      "Lesezeichen"
     not found:                                  "Lesezeichen geben dir eine Übersicht über deine Lieblingsstellen oder bringen dich wieder zu dem Kapitel, das du zuletzt gelesen hast. Um ein Lesezeichen hinzuzufügen, wähle den gewünschten Vers in der Leseansicht und klicke oben auf \"Ausgewählt\"."
@@ -452,6 +463,7 @@ de:
     which day in plan:                          "Tag %{day} von %{total}"
     must start to complete:                     "Abonniere diesen Leseplan; dann kannst deine Lesungen als abgeschlossen abhaken!"
   registration:
+    with facebook:                              "Mit Facebook-Konto registrieren"
     benefits title:                             "Alles erleben"
     benefits blurb:                             "Wenn du ein YouVersion-Konto anlegst, hast du Zugang zu mehr Features, wie Lesezeichen und Notizen. Sie tauchen auf deinem Gerät auf, wenn du dich anmeldest. Mit einem Konto ist es auch leichter, die Bibel mit deinen Freunden zu teilen. Nimm dir doch die ein, zwei Minuten Zeit und registriere dich."
     plan blurb:                                 "Willst du mit einem Leseplan beginnen? Super! Lesepläne können dir helfen, die Bibel zu einem Teil deines täglichen Lebens zu machen. Melde dich an oder lege ein Konto an und leg gleich los!"
@@ -489,8 +501,7 @@ de:
     card exp date:                              "Gültig bis (Monat/Jahr)"
     receipt:                                    "Bitte um Kopie meiner Bestätigung als E-Mail."
     preview:                                    "Vorschau mit Details der Spende"
-    header copy:                                "Gemeinsam könnten wir die Generation werden, die sich mehr mit der Bibel beschäftigt als alle anderen je zuvor. Deine Spende bedeutet, dass Menschen das Wort Gottes auf mehr Plattformen, in mehr Sprachen und Versionen und in mehr Ländern als je zuvor lesen können. Fülle das Formular aus, um zu spenden. Um die Infos für die Zahlung bitten wir auf den nächsten Seite. 
-"
+    header copy:                                "Gemeinsam könnten wir die Generation werden, die sich mehr mit der Bibel beschäftigt als alle anderen je zuvor. Deine Spende bedeutet, dass Menschen das Wort Gottes auf mehr Plattformen, in mehr Sprachen und Versionen und in mehr Ländern als je zuvor lesen können. Fülle das Formular aus, um zu spenden. Um die Infos für die Zahlung bitten wir auf den nächsten Seite. "
     header confirm copy:                        "Gemeinsam könnten wir die Generation werden, die sich mehr mit der Bibel beschäftigt als alle anderen je zuvor. Deine Spende bedeutet, dass Menschen das Wort Gottes auf mehr Plattformen, in mehr Sprachen und Versionen und in mehr Ländern als je zuvor lesen können. Klicke auf \"Jetzt spenden\", um deine Spende zu senden.  "
     donate now button:                          "Jetzt spenden"
     email header:                               "YouVersion, ein Dienst von LifeChurch.tv, hat deine Spende erhalten. Als Gegenleistung für diese Spende wurden, abgesehen vom immateriellen, religiösen Nutzen, keine Waren oder Dienstleistungen ausgetauscht. Bei Fragen kannst du dich an giving@lifechurch.tv wenden."
@@ -563,5 +574,22 @@ de:
     amazon:                                     "Kindle Fire"
   pages:
     generic_error:
+      title:                                    "Hoppla!"
+      explanation:                              "Etwas ist im Hintergrund schief gegangen! Du kannst es erneut versuchen, indem du die Seite neu lädst. Entschuldige die Unanehmlichkeit!"
+      our action:                               "Wir wurden hierüber informiert und werden uns so bald wie möglich darum kümmern."
   shared:
     menu_settings:
+        title:                                  "Deine Einstellungen"
+        close:                                  "Schließen"
+        font:                                   "Schriftart:"
+        font1:                                  "Helvetica"
+        font2:                                  "Georgia"
+        font3:                                  "Baskerville"
+        font4:                                  "Verdana"
+        font size:                              "Schriftgröße:"
+        small:                                  "Klein"
+        medium:                                 "Mittel"
+        large:                                  "Groß"
+        highlights:                             "Markierungen:"
+        on:                                     "An"
+        off:                                    "Aus"
