--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -126,6 +126,9 @@ ko:
     like button text:                           "좋아요"
     unlike button text:                         "좋아요 취소"
   notes:
+    public:                                     "공개"
+    private:                                    "비공개"
+    draft:                                      "임시저장"
     creation form errors:                       "다음의 오류로인해서 노트가 생성되지 않았습니다:"
     status field:                               "Status:"
     reference field:                            "참조구절:"
@@ -170,6 +173,7 @@ ko:
     select another chapter:                     "다른 장을 택하세요"
     view in reader:                             "리더에서 %{reference}  보기"
   users:
+    settings:                                   "설정"
     no connection friends:                      "%{connection} 친구들중 유버전에 가입하시 분이 없습니다."
     creation form errors:                       "다음의 오류로 인해서 계정을 만들지 못했습니다."
     profile form errors:                        "다음의 오류로 인해서 프로필을 변경하지 못했습니다."
@@ -189,6 +193,7 @@ ko:
     following title:                            "팔로윙하는 사람들"
     user does not follow you:                   "%{user} 님은 당신을 팔로우하지 않습니다."
     recent activity:                            "최근활동"
+    my recent_activity:                         "나의 최근 활동"
     started following:                          "팔로우를 시작했습니다."
     subscribed to plan:                         "%{plan} 에 등록하신 분들"
     reading:                                    "이 계획을 읽고 계신 분들"    
@@ -214,11 +219,14 @@ ko:
     user bookmarks:                             "%{user} 님 책갈피"
     my likes:                                   "내 좋아요"
     user likes:                                 "%{user} 님 좋아요"
+    my badges:                                  "내 배지"
     revised date:                               "%{date} 에 최정 수정됨"
     update email copy:                          "새 이메일 주소를 입력후 이메일 변경을 클릭하세요. 새 이메일 주소 확인을 위한 인증메일을 보내겠습니다."
+    edit email:                                 "이메일 변경"
     update email check:                         "받으신 이메일에서 새 이메일 주소 확인 링크를 클릭하세요."
     confirm update email success:               "감사합니다! 이메일 주소가 변경되었습니다."
     confirm update email error:                 "죄송합니다. 이메일 주소 변경시 문제가 발생하였습니다."
+    account confirmed:                          "Your account has been confirmed!"
     invalid email forgot:                       "죄송합니다. 해당 이메일 주소로된 계정을 찾지 못했습니다. 다시 시도하세요."
     send new password button:                   "새 비밀번호 보내기"
     forgot password copy:                       "이메일 주소 입력후에 '새 비밀번호 보내기' 를 클릭하시면, 이메일로 새 비밀번호를  보내겠습니다."
@@ -347,8 +355,11 @@ ko:
       reading_plans:                            "시작한 읽기 계획에 대한 상세정보 알림"
       update:                                   "업데이트 알림"
   bookmarks:
+    edit:                                       "편집"
+    delete:                                     "지정한 책갈피 삭제"
     title field:                                "제목"
     lables:                                     "라벨"
+    all:                                        "전체노트"
     labels label:                               "라벨:"
     title:                                      "책갈피"
     not found:                                  "책갈피는 좋아하는 구절이나 마지막으로 읽은 부분으로 즉시 이동할 수 있도록 도와드립니다. 책갈피를 해두기 위해서는, 먼저 성경 리더에서 원하는 구절을 선택한 후 리더 상단의 '선택' 버튼을 클릭하면 됩니다."
@@ -384,7 +395,7 @@ ko:
     month:                                      "월"
     publisher:                                  "출판자"
     success widget title:                       "성경읽기계획을 최대로 활용하세요"
-    success blurb:                              "성경읽기계획은 하나님의 말씀을 일상 생활의 한 부분으로 만드는 가장 좋은 방법입니다. 그러나 거의 대부분의 사람들이 일정을 놓지게 됩니다. 매일 하나님께서 우리에게 말씀하시는 것을 듣는다는 것은 중요합니다. 그래서 계획을 지속시킬 수 있게 도움을 줄 수 있는 몇 가지 팁을 함께 모았습니다."
+    success blurb:                              "성경읽기계획은 하나님의 말씀을 일상 생활의 한 부분으로 만드는 가장 좋은 방법입니다. 그러나 대부분의 사람들이 일정을 놓치게 됩니다. 하나님께서 우리에게 말씀하시는 것을 매일 듣는다는 것은 중요합니다. 그래서 계획을 지속시킬 수 있게 도움을 줄 수 있는 몇 가지 팁을 함께 모았습니다."
     success blog link title:                    "블로그 읽기"
     a users plans:                              "%{username}의 계획"
     you have no plans:                          "현재 시작한 성경읽기계획은 없습니다."
@@ -408,12 +419,12 @@ ko:
     catch up text:                              "오늘의 읽기를 마지막으로 읽은 날(계획의 %{last_completed_day} 일째)로 변경."
     catch up description only:                  "읽기 계획보다 늦어졌다 해도 걱정마세요! 언제든지 현재 읽고 있는 것을 가장 마지막으로 읽은 것으로 변경할 수 있습니다."
     catch me up:                                "일정 재조정"
-    restart description:                        "여러분의 계획을 다시 시작할 수 있습니다. 그 동안의 모든 읽기 이력과 진행은 초기화 되고 처음부터 새롭게 시작할 것입니다."
+    restart description:                        "읽기 계획을 새로 시작할 수 있습니다. 이전의 모든 읽기 진행도는 지워지고 처음부터 새롭게 시작될 것입니다."
     restart:                                    "계획 새로 시작"
-    privacy description:                        "당신의 선택에 달려있습니다. 이 계획을 읽는 것을 다른 사람이 보기 원하십니까?"
+    privacy description:                        "이 계획을 읽고있음을 다른 사람이 알게 됩니다,  괜찮겠습니까?"
     make private:                               "진행 비공개"
     make public:                                "진행 공개"
-    privacy title:                              "사생활"
+    privacy title:                              "개인정보 보호"
     stop reading:                               "이 읽기계획을 중단합니다."
     accountability:                             "진행관리"
     email reminder to me:                       "이메일로 매일 알려주세요. (%{email_address})"
@@ -452,6 +463,7 @@ ko:
     which day in plan:                          "%{total}일 중 %{day}일"
     must start to complete:                     "읽기를 저장하려면 먼저 이 읽기계획을 시작해야 합니다."
   registration:
+    with facebook:                              "페이스북 계정으로 등록"
     benefits title:                             "완전한 체험을 하세요"
     benefits blurb:                             "유버전 계정을 만드시면 책갈피 및 노트와 같은 더 많은 기능들을 활용할 수 있습니다. 어느 장치에서 로그인을 하든지 관계 없이 확인이 가능합니다. 계정을 만들면 친구들과 말씀을 공유하는 것이 더 쉬워집니다. 지금 가입하세요!"
     plan blurb:                                 "읽기 계획을 시작하기 원하시나요. 현명한 선택입니다!  읽기 계획들은 성경이 일상의 삶 속에 한 부분으로 자리잡을 수 있게 도와드릴 것입니다 . 아래에서 로그인 하거나  계정을 만든 후 바로 시작하세요."
@@ -489,11 +501,11 @@ ko:
     card exp date:                              "유효기간 (MMYY)"
     receipt:                                    "영수증을 이메일로 내게 보내주세요"
     preview:                                    "후원내용 미리보기"
-    header copy:                                "다 함께 동참할 때 우리는 역사상 성경을 가장 많이 접하는 세대가 될 수있습니다.  이 후원은 더 많은 나라에서 더 많은 사람들이 더 많은 언어로 된 번역본을 더 많은 기기를 통해서 하나님의 말씀을 접할 수있도록 도와줍니다.  후원을 위해서 먼저 아래의 양식을 작성하시고, 다음 스크린에서 지불 방법을 적어주세요."
-    header confirm copy:                        "다 함께 동참할 때 우리는 역사상 성경을 가장 많이 접하는 세대가 될 수있습니다.  이 후원은 더 많은 나라에서 더 많은 사람들이 더 많은 언어로 된 번역본을 더 많은 기기를 통해서 하나님의 말씀을 접할 수있도록 도와줍니다.  후원을 하실려면 지금 후원하기 를 클릭해주세요."
+    header copy:                                "함께한다면, 우리는 역사상 성경과 가장 밀접한 세대가 될 수 있습니다. 여러분의 후원은 하나님의 말씀을 더 많은 나라에서 더 많은 사람들이 더 많은 번역본을 더 많은 기기를 통해서 접할 수 있도록 도와줍니다. 후원을 위해서 먼저 아래의 양식을 작성하시고, 다음 스크린에서 지불 방법을 적어주세요."
+    header confirm copy:                        "함께한다면, 우리는 역사상 성경과 가장 밀접한 세대가 될 수 있습니다. 여러분의 후원은 하나님의 말씀을 더 많은 나라에서 더 많은 사람들이 더 많은 번역본을 더 많은 기기를 통해서 접할 수 있도록 도와줍니다. 후원을 원하시면 지금 후원하기를 클릭해주세요."
     donate now button:                          "지금 후원하기"
-    email header:                               "LifeChurch.tv 교회 사역의 하나인 유버전은 여러분의 후원을 받습니다.  후원의 보답으로 보이지않는 종교적 이점 외의 다른 어떤 물건이나 서비스를 제공하지 않습니다.  질문이 있으시면 giving@lifechurch.tv 로 보내주세요."
-    email footer:                               "선생님의 후원금은 지구촌 사람들로 하여금 하나님의 말씀을 사랑하게 하는데 사용되어집니다."
+    email header:                               "LifeChurch.tv 교회 사역의 하나인 유버전은 여러분의 후원을 받습니다. 후원의 보답으로 눈에 보이지 않는 영적인 혜택을 제외한 다른 물건이나 서비스는 제공하지 않습니다. 질문이 있으시면 giving@lifechurch.tv 로 보내주세요."
+    email footer:                               "보내주신 후원금은 지구촌 곳곳에서 하나님의 말씀을 사랑하는데 사용되어집니다."
   download ad:
     title:                                      "무료 성경앱을 다운로드하세요"
     line 1:                                     "어디서나 함께 할 수 있는"
@@ -562,5 +574,22 @@ ko:
     amazon:                                     "킨들 파이어"
   pages:
     generic_error:
+      title:                                    "죄송합니다."
+      explanation:                              "이유를 알 수 없는 오류가 발생했습니다.  로딩을 다시 해주세요.  불편을 끼쳐드려서 죄송합니다."
+      our action:                               "알려주셔서 감사합니다.  즉시 처리되도록 최선을 다하겠습니다."
   shared:
     menu_settings:
+        title:                                  "설정내용"
+        close:                                  "닫기"
+        font:                                   "글꼴"
+        font1:                                  "Helvetica"
+        font2:                                  "Georgia"
+        font3:                                  "Baskerville"
+        font4:                                  "Verdana"
+        font size:                              "크기:"
+        small:                                  "소"
+        medium:                                 "중"
+        large:                                  "대"
+        highlights:                             "하이라이트:"
+        on:                                     "켜기"
+        off:                                    "끄기"
