--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -1,5 +1,5 @@
 ---
-"no":
+no:
   link:                                         "Lenke"
   site search:                                  "YouVersion-søk"
   auth error:                                   "Det oppstod et problem med ditt brukernavn eller passord. Logg inn på YouVersion for å fortsette."
@@ -84,7 +84,7 @@
   privacy policy:                               "Personverninstillinger"
   terms:                                        "Vilkår"
   press:                                        "Presse"
-  get support:                                  "Støtte"
+  get support:                                  "Support"
   donate title:                                 "Gi"
   choose language field:                        "Velg språk:"
   settings:                                     "Innstillinger"
@@ -119,11 +119,16 @@
   160 character limit:                          "160 tegn eller mindre"
   recent versions:                              "Nylig brukt"
   likes:
+    my likes:                                   "Mine \"liker\""
+    all likes:                                  "Alle \"liker\""
     none exist blurb:                           "Beklager, ingen \"liker\" her!"
     likes:                                      "Liker"
     like button text:                           "Lik"
     unlike button text:                         "Ikke lik"
   notes:
+    public:                                     "Offentlig"
+    private:                                    "Privat"
+    draft:                                      "Utkast"
     creation form errors:                       "Følgende feil forhindret opprettelsen av ditt notat:"
     status field:                               "Status:"
     reference field:                            "Referanse(r):"
@@ -145,7 +150,9 @@
     cancel:                                     "Avbryt"
     pop out:                                    "Åpne i eget vindu"
     notes i like:                               "Notater jeg liker"
+    none found:                                 "No notes found..."
     see my likes:                               "Se alt jeg liker"
+    successfully deleted:                       "Note Removed"
   ref:
     clear verses:                               "Nullstill valgte vers"
     choose book and chapter:                    "Velg bok + kapittel"
@@ -166,6 +173,8 @@
     select another chapter:                     "Velg et annet kapittel"
     view in reader:                             "Vis %{reference} i lesemodus"
   users:
+    settings:                                   "Innstillinger"
+    no connection friends:                      "None of your %{connection} friends appear to be on YouVersion yet."
     creation form errors:                       "De følgende feil(ene) forhindret opprettelsen av kontoen din:"
     profile form errors:                        "De følgende feil(ene) forhindret oppdatering av kontoen din:"
     email address:                              "E-postadresse"
@@ -184,6 +193,7 @@
     following title:                            "Folk jeg følger"
     user does not follow you:                   "%{user} følger ikke deg."
     recent activity:                            "Nylig aktivitet"
+    my recent_activity:                         "My Recent Activity"
     started following:                          "Startet å følge"
     subscribed to plan:                         "Brukere abonnerte på %{plan}"
     reading:                                    "Brukere som leser denne planen"    
@@ -209,11 +219,14 @@
     user bookmarks:                             "%{user}s bokmerker"
     my likes:                                   "Mine 'liker'"
     user likes:                                 "%{user}s 'liker'"
+    my badges:                                  "My Badges"
     revised date:                               "Sist endret den %{date}"
     update email copy:                          "Skriv inn en ny epost-adresse og klikk på Oppdater epost. Vi sender deg så en lenke for å bekrefte din nye epost-adresse."
+    edit email:                                 "Oppdater epost"
     update email check:                         "Sjekk eposten din og klikk på lenken for å bekrefte din nye epost-adresse."
     confirm update email success:               "Takk! Vi har oppdatert epost-adressen din."
     confirm update email error:                 "Beklager, det oppsto et problem og epost-adressen din ble ikke endret."
+    account confirmed:                          "Your account has been confirmed!"
     invalid email forgot:                       "Beklager, men vi kunne ikke finne noen konto med den epost-adressen. Vennligst prøv igjen."
     send new password button:                   "Send nytt passord"
     forgot password copy:                       "Skriv inn epost-adressen din og klikk Send nytt passord, så sender vi deg et nytt passord."
@@ -221,6 +234,11 @@
     yes reset:                                  "Ja, endre passordet mitt"
     yes reset and log out:                      "Ja, logg meg ut og endre passordet mitt"
     forgot password:                            "Har du glemt passordet ditt?"
+    resend success:                             "Your confirmation email has been resent. Please check your email."
+    resend error:                               "Sorry, there was an error resending your confirmation email. Please make sure you're entering a valid, registered email address that hasn't already been confirmed."
+    resend confirmation title:                  "Didn't get your confirmation email?"
+    resend confirmation copy:                   "Enter the email address you used to register below and we'll send you another confirmation email."
+    resend confirmation button:                 "Resend Confirmation"
     privacy:
       policy:                                   "%{youversion} Personvern"
       intro:                                    "YouVersion, et nettsted og applikasjon eiet og driftet av LifeChurch.tv, vet du er opptatt av hvordan informasjon om deg blir brukt. Vi håper følgende redegjørelse vil hjelpe deg å forstå hvordan YouVersion samler inn, bruker og beskytter den informasjonen du gir oss på vår nettside eller applikasjon. Vi vil ikke bruke eller dele din informasjon med noen på noen annen måte enn det som er beskrevet under Personvern."
@@ -337,8 +355,11 @@
       reading_plans:                            "Varsle meg om informasjon for leseplaner jeg følger."
       update:                                   "Oppdater varslinger"
   bookmarks:
+    edit:                                       "Rediger"
+    delete:                                     "Delete this Bookmark"
     title field:                                "Tittel"
     lables:                                     "Emner"
+    all:                                        "Alle"
     labels label:                               "Emner:"
     title:                                      "Bokmerker"
     not found:                                  "Bokmerker gir deg en rask tilgang på dine favoritt-tekster eller det siste kapittelet du leste i en spesiell bok. For å legge til et bokmerke velger du vers når du leser og trykker på ikonet øverst for bokmerke."
@@ -348,11 +369,13 @@
     labels placeholder:                         "Skill ulike emner med komma."
     save:                                       "Lagre bokmerke"
     confirm delete:                             "Ja, jeg er sikker"
+    loading:                                    "Loading your bookmarks..."
   badges:
     earned a badge:                             "Fått et merke"
     user badges:                                "%{user}s merker"
   plans:
     title:                                      "Leseplaner"
+    browse by category:                         "Browse by Category"
     browse plans:                               "Utforsk planer for %{category}"
     all:                                        "Alle"
     all plans:                                  "Alle planer"
@@ -383,10 +406,14 @@
     subscribe to plan:                          "Start denne planen"
     previous day:                               "Forrige dag"
     next day:                                   "Neste dag"
+    reading completed _ mark and show next:     "Next: %{next_reference}"
     which reading:                              "%{current} av %{total}"
     done reading:                               "Ferdig"
     read today:                                 "Vis dagens lesing"
+    completion status _ below percentage:       "Complete"
     current progress html:                      "Dag <b>%{day}</b> av <b>%{total_days}</b>"
+    start date _ before date string:            "Start Date:"
+    end date _ before date string:              "End Date:"
     are you behind:                             "Henger du etter?"
     do you want to reset:                       "Vil du begynne på nytt?"
     catch up text:                              "Endre dagens lesning tilbake til din sist fullførte lesning (dag %{last_completed_day} i din plan)."
@@ -436,6 +463,7 @@
     which day in plan:                          "Dag %{day} av %{total}"
     must start to complete:                     "Abonner på denne planen for å lagre det du har lest."
   registration:
+    with facebook:                              "Registrer deg med Facebook"
     benefits title:                             "Få den fullstendige opplevelsen"
     benefits blurb:                             "Å opprette en YouVersion-konto gir deg tilgang til flere funksjoner som bokmerker og notater. De vil vises på en hvilken som helst enhet der du er innlogget. En brukerkonto gjør det også enklere å dele Bibelen med dine venner, så ta et minutt eller to og registrer deg."
     plan blurb:                                 "Det ser ut til at du ønsker å starte på en leseplan. Smart! Planer kan hjelpe deg å gjøre Bibelen til en del av ditt dagligliv. Logg inn eller registrer deg under og kom i gang!"
@@ -460,13 +488,24 @@
     all versions:                               "Alle %{language_name} oversettelser"
   donate:
     donate now:                                 "Gi nå"
+    donate now intl:                            "or donate internationally"
     promo 1:                                    "For hver 1$ du gir vil 10 personer få tilgang til Bibelen på sin mobiltelefon."
     promo 2:                                    "Med YouVersion er Bibelen alltid i nærheten. Se vår video."
     promo 3:                                    "I år vil over fem milliarder mennesker bruke en mobiltelefon. Gi nå."
     headline:                                   "Alle trenger Guds ord."
     subhead:                                    "Hjelp mennesker i hele verden å komme i kontakt med Bibelen."
     copy:                                       "Tenk deg at du kunne gi alle i hele verden en gratis bibel. Når du gir til YouVersion, kan du akkurat det. Vi lever i en tid som folk tidligere bare kunne drømme om &ndash; en tid når alle som har en telefon kan få tilgang til Bibelen  og oppleve fortellingen om Guds kjærlighet til oss. Med din støtte kan vi fortsette å hjelpe flere mennesker til å bruke mer tid på Skriften."
+    amount:                                     "Donation amount (USD)"
+    name:                                       "Your name"
+    card number:                                "Credit card number"
+    card exp date:                              "Expiration date (MMYY)"
+    receipt:                                    "Email me a copy of my receipt."
+    preview:                                    "Preview Donation"
+    header copy:                                "Together, we could become the most Bible-engaged generation in history. Your support means people can open God's Word on more platforms, in more languages, in more versions, and in more countries than ever before. Please fill out the form below to make your donation. We'll collect payment info on the next screen."
+    header confirm copy:                        "Together, we could become the most Bible-engaged generation in history. Your support means people can open God's Word on more platforms, in more languages, in more versions, and in more countries than ever before. Click Donate Now to make your donation."
     donate now button:                          "Gi nå"
+    email header:                               "YouVersion, a ministry of LifeChurch.tv, has received your donation. No goods or services were provided in exchange for the donation, except intangible religious benefits. Please contact giving@lifechurch.tv with questions."
+    email footer:                               "Your donation will help people around the world fall in love with God's Word."
   download ad:
     title:                                      "Last ned gratis Bibel-app."
     line 1:                                     "Hundrevis av oversettelser på mange"
@@ -532,7 +571,25 @@
     java:                                       "Java"
     symbian:                                    "Symbian"
     mobile web:                                 "Mobilt nett"
+    amazon:                                     "Kindle Fire"
   pages:
     generic_error:
+      title:                                    "Oops!"
+      explanation:                              "Something went wrong behind the scenes! You can try again by reloading the page, we're very sorry for the inconvenience!"
+      our action:                               "We've been notified about this and will jump on it as soon as possible."
   shared:
     menu_settings:
+        title:                                  "Your Settings"
+        close:                                  "Lukk"
+        font:                                   "Font:"
+        font1:                                  "Helvetica"
+        font2:                                  "Georgia"
+        font3:                                  "Baskerville"
+        font4:                                  "Verdana"
+        font size:                              "Size:"
+        small:                                  "Liten"
+        medium:                                 "Medium"
+        large:                                  "Stor"
+        highlights:                             "Highlights:"
+        on:                                     "On"
+        off:                                    "Off"
