--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -84,7 +84,7 @@ ru:
   privacy policy:                               "Политика конфиденциальности"
   terms:                                        "Условия"
   press:                                        "Уголок прессы"
-  get support:                                  "Служба поддержки"
+  get support:                                  "Поддержка"
   donate title:                                 "Сделать пожертвование"
   choose language field:                        "Выберите язык:"
   settings:                                     "Настройки"
@@ -221,11 +221,12 @@ ru:
     user likes:                                 "Понравившееся %{user}"
     my badges:                                  "Мои значки"
     revised date:                               "Последний раз редактировалось %{date}"
-    update email copy:                          "Введите новый адрес электронной почты и нажмите Обновить Email. Мы вышлем Вам письмо со ссылкой для подтверждения нового адреса электронной почты."
-    edit email:                                 "Изменить емейл"
+    update email copy:                          "Введите новый адрес электронной почты и нажмите \"Изменить адрес\". Мы вышлем Вам письмо со ссылкой для подтверждения нового адреса электронной почты."
+    edit email:                                 "Изменить адрес"
     update email check:                         "Пожалуйста, проверьте email и перейдите по ссылке, чтобы подтвердить Ваш новый адрес."
     confirm update email success:               "Спасибо! Вы обновили свой адрес email."
     confirm update email error:                 "Извините, при обновлении адреса email возникла ошибка."
+    account confirmed:                          "Ваш аккаунт был подтверждён!"
     invalid email forgot:                       "Извините, мы не смогли найти учётную запись, зарегистрированную на такой адрес email. Пожалуйста, попробуйте снова."
     send new password button:                   "Выслать новый пароль"
     forgot password copy:                       "Введите Ваш адрес email и нажмите \"Выслать новый пароль\", и мы вышлем Вам новый пароль."
@@ -355,7 +356,7 @@ ru:
       update:                                   "Сохранить"
   bookmarks:
     edit:                                       "Редактировать"
-    delete:                                     "Удалить эту закладку"
+    delete:                                     "Удалить"
     title field:                                "Название"
     lables:                                     "Ярлыки"
     all:                                        "Все"
